# private-to-public-api-aggregator

./: .gitignore  Cargo.toml  README.md  config.local.toml.example  config.toml
src/: aggregator.rs  auth.rs  config.rs  letterboxd.rs  main.rs  spotify.rs
