[package]
name = "API-Agg-For-Static"
version = "0.1.0"
edition = "2024"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
rand = "0.9.1"
femme = "2.2.1"
rss = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
surf = "2.3.0"
url = "2.5.4"
chrono = { version = "0.4.40", features = ["serde"] }
base64 = "0.22.1"
http-types = "2.12.0"
futures = "0.3"

